# AINetwork

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
.kiro/specs/advanced-monitoring/: design.md  requirements.md  tasks.md
.kiro/specs/netarchon-core/: design.md  requirements.md  tasks.md
.kiro/specs/ubuntu-server-deployment/: design.md  requirements.md  tasks.md
config/: .encryption_key  default.yaml  development.yaml  netarchon.yaml.example  production.yaml  users.json
deployment/: netarchon-streamlit.service  ubuntu-server-setup.md
docker/: alerts.Dockerfile  collector.Dockerfile  web.Dockerfile
docs/: README.md  activity.md  api_documentation.md  api_reference.md  cli-usage.md  contributing.md  faq.md  how-to-use-netarchon.md  installation.md  quickstart.md  security_implementation.md  troubleshooting.md  ubuntu-deployment.md  ubuntu-server-deployment.md  user_guide.md  web_architecture.md  web_development_plan.md
examples/: __init__.py  advanced_monitoring.py  basic_device_connection.py  bulk_configuration.py  configuration_management.py  monitoring_example.py
scripts/: deploy.py  install-dependencies.sh  install.sh  run_tests.py  setup_dev_env.py  ubuntu-24.04-install.sh
src/netarchon/: __init__.py
src/netarchon/ai/: __init__.py  coordinator.py  nlp_interface.py  task_automation.py
src/netarchon/config/: __init__.py  config_loader.py  settings.py
src/netarchon/core/: __init__.py  alerting.py  command_executor.py  config_manager.py  device_manager.py  enhanced_ssh_connector.py  monitoring.py  ssh_connector.py
src/netarchon/integrations/: __init__.py
src/netarchon/integrations/bitwarden/: __init__.py  exceptions.py  manager.py  models.py
src/netarchon/integrations/rustdesk/: __init__.py  exceptions.py  home_network_integration.py  installer.py  models.py  monitor.py
src/netarchon/models/: __init__.py  alerts.py  connection.py  device.py  metrics.py
src/netarchon/monitoring/: alert_manager.py  alert_utils.py  concurrent_collector.py  storage_manager.py
src/netarchon/utils/: __init__.py  circuit_breaker.py  exceptions.py  logger.py  retry_manager.py
src/netarchon/web/: __init__.py  streamlit_app.py
src/netarchon/web/components/: __init__.py  dashboard_metrics.py  home_network.py  secure_scanner.py
src/netarchon/web/config/: .encryption_key
src/netarchon/web/pages/: 1_🏠_Dashboard.py  2_📱_Devices.py  3_⚙️_Configuration.py  4_📊_Monitoring.py  5_🔧_Terminal.py  6_🔒_Security.py  7_🔐_Credentials.py  8_🖥️_RustDesk.py  9_📊_Dashboard.py
src/netarchon/web/utils/: __init__.py  data_loader.py  security.py
tasks/: current_plan.md  todo.md
tests/: __init__.py
tests/integration/: __init__.py  test_config_management.py
tests/performance/: __init__.py  test_concurrent_operations.py
tests/unit/: __init__.py  test_alerting.py  test_circuit_breaker.py  test_command_executor.py  test_config_deployment.py  test_config_manager.py  test_connection_models.py  test_device_manager.py  test_device_models.py  test_error_recovery.py  test_exceptions.py  test_logger.py  test_metrics_models.py  test_monitoring.py  test_retry_manager.py  test_settings.py  test_ssh_connector.py
